Thu Dec 14 17:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkmovelist.c: Fix for bug #17845 multiple highlights in hint
	* import.c: Small partygammon fix
	* gnubg.c: Fix for bug #12131 menus while analysing games

Tue Dec 12 15:54:22 CET 2006 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, gtkgame.c: Save/Load rollout settings added to gtk interface

Sun Dec 10 17:27:29 CET 2006 Christian Anthon <anthon@kiku.dk>

	* configure.in, lib/neuralnet.c: configure option to disable the sse
	test (e.g. on amd64)

Thu Dec  7 16:57:14 CET 2006 Christian Anthon <anthon@kiku.dk>

	* gnubg.c: make CommandImportParty compile without gtk

Thu Dec  7 00:59:04 CET 2006 Christian Anthon <anthon@kiku.dk>

	* various: mingw fixes of autotool changes

Thu Dec  7 00:10:46 CET 2006 Christian Anthon <anthon@kiku.dk>

	* too many to list: major autotools/library cleanup. Likely some
	things will be broken on some systems.

Tue Dec  5 09:53:54 CET 2006 Christian Anthon <anthon@kiku.dk>

	* ChangeLog, configure.in, gnubg.c, gtkprefs.c, gtktexi.c,
	matchequity.c, rollout.c: vprintf cleanup

Tue Dec  5 00:44:07 CET 2006 Christian Anthon <anthon@kiku.dk>

	* common.h, configure.in, dice.c, eval.c, export.c, gnubg.c,
	gtkchequer.c, gtkcube.c, gtkexport.c, gtkgame.c, gtkmet.c,
	gtkmovefilter.c, gtkrace.c, gtktexi.c, gtktheory.c, osr.c, path.c,
	render.c, rollout.c, lib/Makefile.am, lib/buffer.c, lib/neuralnet.c:
	alloca cleanup (we allways have g_alloca).

Mon Dec  4 10:10:29 CET 2006 Christian Anthon <anthon@kiku.dk>

	* gtkoptions.c: hide sound options when compile without USE_SOUND

Sat Dec  2 21:52:04 CET 2006 Christian Anthon <anthon@kiku.dk>

	* rollout.c, progress.c: Disable view rollout statistics after
	close/reopen. Add drops to won games in rollout statistics.

Thu Nov 30 23:43:03 CET 2006 Christian Anthon <anthon@kiku.dk>

	* eval.c, gtkgame.c: remove meaningless data from evaluation window
	and fix window size

Thu Nov 30 22:17:24 CET 2006 Christian Anthon <anthon@kiku.dk>